# riscv32-cosim-model

./: .gitignore  .gitmodules  Makefile  README.md  decoder.cpp  decodesv.cpp  fpga_top.bsf  platform.qsys  platform.sopcinfo  sv_compile_list.txt  tb_regen  test.sv  verible.filelist  xsim_sv_compile_list
.reuse/: dep5
common/: CMakeLists.txt
config/: common.mk  lib.mk  uart_client.mk  xsim.mk
decoder/: CMakeLists.txt
decoder/decoder/: CMakeLists.txt
decoder/decoder/include/decoder/: decoder.hpp  rvc_ca.hpp
decoder/decoder/src/: decoder.cpp
decoder/decoder/src/decoder/: decoder16.cpp
decoder/include/decoder/: rv32_isn.hpp  rvc_cr.hpp  rvc_isn.hpp
design/: dec.sv  dec_decode.sv  decoder.sv  defs.sv  inst.svh  sign_extend_imm.sv
docs/: pipeline.gv  soc.gv
extra/: filelist.pl  format.sh
include/common/: op.hpp  program_counter.hpp  serialize.hpp
ip/altera_axi_master/: platform.bsf
ip/intel_ocram_drw_sedge/: intel_ocram_drw_sedge.bsf  intel_ocram_drw_sedge.qip  intel_ocram_drw_sedge.v  intel_ocram_drw_sedge_bb.v  intel_ocram_drw_sedge_inst.v  intel_ocram_drw_sedge_syn.v
ip/platform/: platform.bsf  platform.cmp  platform.csv  platform.html  platform.spd  (+4 more)
src/: boot.hex
testbench/: tb_dec_decode.sv  tb_decoder.sv
tools/: clean.pl  format.sh  fpga_top.sdc  fpga_top.tcl  intel_synth.sh  intel_synth.tcl  platform.qsys  platform.sopcinfo  platform.tcl  platform_hw.tcl  regen  riscv_core_hw.tcl  run.tcl  run_top.sh  sta.tcl  sv_compile_list.txt  tb_regen.sh  top_level.tcl  uart  uart_client.c  verilator.sh  vivado.sh  vivado.tcl  yosys.sh
(+685 files in other folders)
